# scm-datasets

./: .gitignore  README.md  __init__.py  activations.py  basic.py  gp.py  posthoc.py  pyproject.toml  scm.py
examples/: activation_pool_demo.py  activations_demo.py  causes_demo.py  meta_demo.py  pool_demo.py  posthoc_demo.py  quickstart.py  scm_demo.py
metabeta/scm/: __init__.py  basic.py  causes.py  posthoc.py  scm.py
scamd/: __init__.py  api.py  basic.py  causes.py  gp.py  meta.py  plotting.py  posthoc.py  scm.py  utils.py
src/: __init__.py  activations.py  basic.py  causes.py  gp.py  meta.py  posthoc.py  scm.py  utils.py
tests/: test_generate_dataset_stress.py  test_rng_consistency.py  test_scm_smoke.py
