[project]
name = "scamd"
version = "0.1.0"
description = "Structural causal models for simulating realistic datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blue>=0.9.1",
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]
