[project]
name = "scamd"
version = "0.1.0"
description = "Structural causal models for simulating realistic datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blue>=0.9.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "scipy>=1.16.3",
    "spyder-kernels>=3.1.3",
    "torch>=2.9.1",
    "tqdm>=4.67.3",
]
